tests/snapshots/register_operations_test__selection_register.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:17
Lines: 1

Buffer:
hello worldhello [ ]
