tests/snapshots/register_operations_test__slash_register_search_pattern.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Search
Cursor: 0:6
Lines: 1

Buffer:
hello [w]orld
