tests/snapshots/register_operations_test__small_delete_register.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:2
Lines: 1

Buffer:
eh[l]lo world
