tests/snapshots/register_operations_test__small_delete_vs_numbered.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:12
Lines: 1

Buffer:
wello oello [r]ld
