tests/snapshots/register_operations_test__swap_words_with_registers.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:24
Lines: 1

Buffer:
hyiww"byiw0diw"bpwdiw"ap[e]llo world
