tests/snapshots/register_operations_test__unnamed_register_change.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:12
Lines: 1

Buffer:
Xworldhello [ ]
