tests/snapshots/register_operations_test__unnamed_register_delete.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:7
Lines: 1

Buffer:
whello [o]rld
