tests/snapshots/register_operations_test__visual_delete_to_register.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:7
Lines: 1

Buffer:
 worldp[ ]
