tests/snapshots/register_operations_test__visual_yank_to_register.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:17
Lines: 1

Buffer:
hello world testp[ ]
