tests/snapshots/register_operations_test__yank_to_named_register.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:8
Lines: 1

Buffer:
hyiw$"ap[e]llo world
