tests/snapshots/register_operations_test__yank_updates_unnamed_and_0.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:7
Lines: 1

Buffer:
hhello [e]llo worldhello
